Añadiendo un h3 en el section creado recientemente y otros cambios en estilos.css

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -11,6 +11,11 @@ body {
   background-position: left;
 }
 
+/*New Section*/
+h3{
+  color: blueviolet;  
+}
+
 /* Mis trabajos */
 
 #Mis-trabajos .image-top {
